Add support for multiple configurable outputs. Only libao and harbor are supported for now.

--- a/example.conf
+++ b/example.conf
@@ -8,4 +8,6 @@ chill2=/Volumes/Data/Musics/liq/chill2
 
 [sequence]
 chill=5
-xx=no
+xx=no[outputs]
+#local=type:ao,id:main,buffer_size:4
+stream1=type:harbor,format:aac,mount:/chill
