--- a/example.conf
+++ b/example.conf
@@ -1,6 +1,8 @@
 [settings]
 backlog_size=30
 replay_gain=true
+save_dump=true
+auto_resume=true
 
 [playlists]
 chill=/Volumes/Data/Musics/liq/chill
