Update example file.

--- a/example.conf
+++ b/example.conf
@@ -10,6 +10,7 @@ chill2=/Volumes/Data/Musics/liq/chill2
 
 [sequence]
 chill=5
-xx=no[outputs]
+
+[outputs]
 #local=type:ao,id:main,buffer_size:4
 stream1=type:harbor,format:aac,mount:/chill
