Add arch banner.

--- a/example.conf
+++ b/example.conf
@@ -9,7 +9,8 @@ chill=/Volumes/Data/Musics/liq/chill
 chill2=/Volumes/Data/Musics/liq/chill2
 
 [sequence]
-chill=5
-xx=no[outputs]
-#local=type:ao,id:main,buffer_size:4
-stream1=type:harbor,format:aac,mount:/chill
+chill=5.0
+
+[outputs]
+local=type:ao,id:main,buffer_size:4
+# stream1=type:harbor,format:aac,mount:/chill
